<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/moveToInfrastructure"
        android:title="@string/move_to_infrastructure"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/completed"
        android:title="@string/completed"
        app:showAsAction="never"
        />

     <item
        android:id="@+id/inComplete"
        android:title="@string/inComplete"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/showDetails"
        android:title="@string/show_details"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/showLocation"
        android:title="@string/show_location"
        app:showAsAction="never"
        />


</menu>