<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- add worker text view -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/sign_in_txt_color"
        android:id="@+id/workerTxt"
        android:text="@string/add_worker"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/recycler_view_margin"
        />

    <!-- Edit text for worker name-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/worker_name"
        android:layout_marginTop="@dimen/margin_login_card_view"
        android:layout_marginLeft="@dimen/margin_login_card_view"
        android:layout_marginRight="@dimen/margin_login_card_view"
        android:hint="@string/enter_worker_name"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="@dimen/recycler_view_margin"
        android:inputType="text"
        />

    <!-- Edit text for worker phone no-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/worker_phone_no"
        android:layout_marginTop="@dimen/margin_login_card_view"
        android:layout_marginLeft="@dimen/margin_login_card_view"
        android:layout_marginRight="@dimen/margin_login_card_view"
        android:hint="@string/phone_no"
        android:drawableLeft="@drawable/ic_phone_black_24dp"
        android:drawablePadding="@dimen/recycler_view_margin"
        android:inputType="phone"
        />

    <!-- Edit text for worker cnic-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/worker_name_cnic"
        android:layout_marginTop="@dimen/margin_login_card_view"
        android:layout_marginLeft="@dimen/margin_login_card_view"
        android:layout_marginRight="@dimen/margin_login_card_view"
        android:hint="@string/worker_cnic"
        android:drawableLeft="@drawable/ic_credit_card_black_24dp"
        android:drawablePadding="@dimen/recycler_view_margin"
        android:inputType="number"
        />

    <Button
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_worker_btn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top_login_card_view"
        android:layout_marginBottom="@dimen/margin_login_card_view"
        android:text="@string/add_worker"
        android:backgroundTint="@color/sign_in_txt_color"
        app:cornerRadius="16dp"
        android:elevation="@dimen/card_view"


        />



</LinearLayout>