<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppModules.SanitationHead.ComplaintFragements.CompletedComplaints.AddCompletedWorkOnComplaint">


    <!-- Tool bar  -->
    <include layout="@layout/app_tool_bar"
        android:id="@+id/completed_complaint_tool_bar"
        />

    <!-- Scroll view  -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/completed_complaint_tool_bar"
        >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <!-- Title Of completed complaint edit text -->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/titleOfCompletedComplaintTextInputLayout"

        android:layout_marginTop="@dimen/margin_login_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        app:boxStrokeColor="@color/sign_in_txt_color">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

        <!-- First Worker Name  -->
   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/first_worker_name_completed_complaints"
       android:hint="@string/first_worker_name"
       android:layout_below="@+id/titleOfCompletedComplaintTextInputLayout"
       android:layout_marginLeft="@dimen/edit_text_margin"
       android:layout_marginRight="@dimen/edit_text_margin"
       android:layout_marginTop="@dimen/edit_text_margin"
       />

        <!-- Second Worker Name  -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/second_worker_name_completed_complaints"
        android:hint="@string/second_worker_name"
        android:layout_below="@+id/first_worker_name_completed_complaints"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:layout_marginTop="@dimen/edit_text_margin"
        />

        <!-- Button upload completed work image -->
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/btnUploadCompletedComplaintImage"
        android:layout_below="@+id/second_worker_name_completed_complaints"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_login_card_view"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:textSize="15sp"
        android:text="Upload Image"
        android:textColor="@color/sign_in_txt_color"
        app:cornerRadius="16dp"/>

        <!-- Completed work image  -->
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/completedComplaintImageForFeeback"
        android:layout_below="@+id/second_worker_name_completed_complaints"
        android:layout_toRightOf="@+id/btnUploadCompletedComplaintImage"
        android:layout_marginTop="@dimen/margin_login_card_view"
        android:src="@drawable/ic_launcher_background"
        android:visibility="invisible"
        />

        <!-- No file choose text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textNoFileChoose"
        android:text="No File Choose"
        android:padding="@dimen/edit_text_margin"
        android:textColor="@color/sign_in_txt_color"
        android:layout_below="@+id/second_worker_name_completed_complaints"
        android:layout_toRightOf="@+id/btnUploadCompletedComplaintImage"
        android:layout_marginTop="@dimen/margin_login_card_view"
        />

        <!-- Submit for user feedback button-->
    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/btnSubmitCompletedComplaintForFeedBack"
        android:layout_below="@+id/btnUploadCompletedComplaintImage"
        android:layout_marginTop="@dimen/margin_login_card_view"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:textSize="15sp"
        android:text="Submit"
        android:backgroundTint="@color/sign_in_txt_color"
        app:cornerRadius="16dp"/>

    </RelativeLayout>

    </ScrollView>
</RelativeLayout>