<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/recycler_view_margin"
        android:layout_marginBottom="1.5dp"
        android:layout_marginLeft="@dimen/recycler_view_margin"
        android:layout_marginRight="@dimen/recycler_view_margin"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp"
        >


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/recycler_view_margin"
                >


            <RelativeLayout
                android:id="@+id/innerRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:layout_width="74dp"
                    android:layout_height="74dp"
                    android:id="@+id/sanitationComplaintsImageInItemDesign"
                    android:src="@drawable/ic_launcher_background"
                    android:layout_marginLeft="@dimen/recycler_view_margin"
                    android:layout_marginTop="@dimen/recycler_view_margin"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sanitationComplaintsTitleInItemDesign"
                    android:text="@string/title"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_toRightOf="@+id/sanitationComplaintsImageInItemDesign"
                    android:layout_marginLeft="@dimen/recycler_view_margin"
                    android:layout_marginTop="@dimen/recycler_view_margin"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dateAndTimeOfSanitationComplaints"
                    android:layout_below="@+id/sanitationComplaintsTitleInItemDesign"
                    android:layout_toRightOf="@id/sanitationComplaintsImageInItemDesign"
                    android:text="Date and time"
                    android:textSize="10sp"
                    android:layout_marginLeft="@dimen/recycler_view_margin"
                    android:drawableStart="@drawable/ic_access_alarm_black_24dp"
                    android:drawableLeft="@drawable/ic_access_alarm_black_24dp"
                    android:drawablePadding="@dimen/recycler_view_margin"/>


                <com.borjabravo.readmoretextview.ReadMoreTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sanitationComplaintsdescription"
                    android:text="@string/dummy_text"
                    android:layout_below="@+id/dateAndTimeOfSanitationComplaints"
                    android:layout_toRightOf="@id/sanitationComplaintsImageInItemDesign"
                    android:layout_marginLeft="@dimen/recycler_view_margin"
                    app:trimMode="trimModeLength"
                    app:trimLength="70"
                    app:colorClickableText="@color/sign_in_txt_color"
                    />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/moreIconButtonInSanitationComplaints"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_more_vert_black_24dp"
                    android:background="@null"
                    android:layout_marginTop="@dimen/recycler_view_margin"
                    android:layout_marginRight="@dimen/recycler_view_margin"

                    />

            </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/view"
                    android:layout_below="@+id/innerRelativeLayout"
                    android:layout_marginTop="@dimen/card_view"
                    android:background="#000"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/complaintPersonName"
                    android:text="Name"
                    android:layout_below="@id/view"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/recycler_view_margin"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/statusOfSanitationComplaints"
                    android:layout_below="@id/view"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/card_view"
                    android:text="@string/status_of_complaints"
                    android:gravity="start"
                    />



            </RelativeLayout>



    </androidx.cardview.widget.CardView>

</LinearLayout>